# otus.lessons.30.01

./: .travis.yml  README.md
docker/: Dockerfile  docker.sh  gen_data.pl  test.sh
src/: CMakeLists.txt  main.cpp  samples.pl  samples_g.pl
